--- a/dev/templates/selection.html
+++ b/dev/templates/selection.html
@@ -97,7 +97,7 @@
     </div>
     <div class="row">
         <div class="col-2">
-            <button class="accordion">Категории</button>
+            <button class="c-aside-btn" data-accordion>Категории</button>
             <div class="panel">
                 <ul class="c-accordion-list">
                     <div class="c-accordion-list__item">
@@ -150,7 +150,7 @@
                     </div>
                 </ul>
             </div>
-            <button class="accordion">Высота</button>
+            <button class="c-aside-btn" data-accordion>Высота</button>
             <div class="panel">
                 <ul class="c-accordion-list">
                     <div class="c-accordion-list__item">
@@ -203,7 +203,7 @@
                     </div>
                 </ul>
             </div>
-            <button class="accordion">Ширина</button>
+            <button class="c-aside-btn" data-accordion>Ширина</button>
             <div class="panel">
                 <ul class="c-accordion-list">
                     <div class="c-accordion-list__item">
