фиксы и + 3 новые страницы

--- a/dev/scss/base/_reset.scss
+++ b/dev/scss/base/_reset.scss
@@ -133,7 +133,7 @@ button, input, optgroup, select, textarea {
 }
 a{
 	text-decoration: underline;
-	color: $color-secondary;
+	color: inherit;
 	&:hover,&:focus{
 		text-decoration: none;
 	}
