--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -1,13 +1,14 @@
 /****************************************************************************/
 /* COLORS */
 /****************************************************************************/
-
-$color-primary: #10702A;
-$color-secondary: #F18E8E;
-$color-tertiary: #898888;
-$color-quaternary: #00A9A9;
-$gradient-primary: linear-gradient(102.22deg, #34835D -1.81%, #11F889 102.91%);
-$gradient-secondary: linear-gradient(102.22deg, #F8A2A2 -1.81%, #D64545 102.91%);
+$color-primary: #82A4E8;
+$color-secondary: #21458C;
+$color-tertiary: #6C95E8;
+$color-lightest: #FFFFFF;
+$color-lighten: #F2F2F2;
+$color-dark: #7C7C7C;
+$color-darken: #555555;
+$color-darkest: #000000;
 $color-success: #15b500;
 $color-error: #e41924;
 $color-warning: #eb7805;
