--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,13 +2,8 @@
   min-height: 78px;
   padding: 5px 0;
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: $color-lightest;
   z-index: 10;
-}
-
-.c-header__phone {
-  font-weight: 600;
-  color: $color-quaternary;
 }
 
 .c-header__logo {
@@ -28,8 +23,8 @@
 
 .c-top-menu__item_active {
   .c-top-menu__link {
-    color: #21458C;
-    border-bottom: 1px solid #21458C;
+    color: $color-secondary;
+    border-bottom: 1px solid $color-secondary;
   }
 }
 
@@ -37,15 +32,15 @@
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
-  color: #7C7C7C;
+  color: $color-dark;
   display: flex;
   height: 62px;
   justify-content: center;
   align-items: center;
 
   &:hover, &:focus {
-    color: #82A4E8;
-    border-bottom: 1px solid #82A4E8;
+    color: $color-primary;
+    border-bottom: 1px solid $color-primary;
   }
 
 }
@@ -54,13 +49,6 @@
   position: absolute;
   top: -12px;
   right: -5px;
-  &__submit {
-    position: absolute;
-    top: 9px;
-    right: 12px;
-    width: auto;
-    background-color: transparent;
-  }
 
   &__inner {
     height: 62px;
@@ -68,10 +56,7 @@
     align-items: center;
   }
 
-  &__form {
-    width: 880px;
-    position: relative;
-  }
+
 
   & .c-input {
     width: 100%;
@@ -79,6 +64,20 @@
   }
 }
 
+.c-search-form {
+  position: relative;
+  width: 100%;
+  &_header{
+    width: 880px;
+  }
+  &__submit {
+    position: absolute;
+    top: 9px;
+    right: 12px;
+    width: auto;
+    background-color: transparent;
+  }
+}
 .c-header-icon-list {
   display: flex;
   margin-left: -8px;
@@ -101,7 +100,7 @@
     padding: 5px;
 
     &:hover, &:focus {
-      background-color: rgba(#82A4E8, .1);
+      background-color: rgba($color-primary, .1);
     }
   }
 
@@ -113,7 +112,7 @@
     position: relative;
     z-index: 1;
     margin: 4px;
-    color: #FFFFFF;
+    color: $color-lightest;
     font-size: 12px;
     line-height: 1;
   }
@@ -131,7 +130,7 @@
       content: "";
       position: absolute;
       display: block;
-      background-color: #82A4E8;
+      background-color: $color-primary;
       border-radius: 10px;
       width: 100%;
       height: 100%;
