--- a/dev/templates/docs.html
+++ b/dev/templates/docs.html
@@ -156,7 +156,7 @@
             <div class="col-10">
                 <div class="c-docs-section">
                     <div class="c-docs-section__header">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-12 col-lg-auto">
                                 <h2 class="c-docs-section__title">Название подраздела</h2>
                             </div>
@@ -336,7 +336,7 @@
                 </div>
                 <div class="c-docs-section">
                     <div class="c-docs-section__header">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-12 col-lg-auto">
                                 <h2 class="c-docs-section__title">Название подраздела</h2>
                             </div>
@@ -516,7 +516,7 @@
                 </div>
                 <div class="c-docs-section mb-0">
                     <div class="c-docs-section__header">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-12 col-lg-auto">
                                 <h2 class="c-docs-section__title">Название подраздела</h2>
                             </div>
