--- a/dev/templates/favorite.html
+++ b/dev/templates/favorite.html
@@ -128,12 +128,7 @@
                 </a>
             </li>
             <li class="c-breadcrumbs__item">
-                <a class="c-breadcrumbs__link" href="#">
-                    <span class="c-breadcrumbs__title">Продукты и решения</span>
-                </a>
-            </li>
-            <li class="c-breadcrumbs__item">
-                <span class="c-breadcrumbs__title">Брошюры и буклеты</span>
+                <span class="c-breadcrumbs__title">Избранное</span>
             </li>
         </ul>
     </div>
