--- a/dev/templates/authorization.html
+++ b/dev/templates/authorization.html
@@ -126,13 +126,13 @@
             </div>
             <div class="c-form__body">
                 <div class="c-form__fields">
-                    <div class="c-form__field c-input-wrap c-input-wrap_lg">
+                    <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
                         <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
                                id="login" required
                                type="text">
                         <label class="c-input-wrap__label" for="login"> Логин <span class="u-text-red">*</span> </label>
                     </div>
-                    <div class="c-form__field c-input-wrap c-input-wrap_lg">
+                    <div class="c-form__field c-input-wrap c-input-wrap_lg c-input-wrap_anim-label">
                         <input class="w-100 c-input-wrap__input c-input c-input_style-default c-input_lg c-input_color-primary"
                                id="password" required type="password">
                         <label class="c-input-wrap__label" for="password"> Пароль <span class="u-text-red">*</span></label>
